--- a/js/index.html
+++ b/js/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Лабараторная работа</title>
-  </head>
+</head>
+
 <body>
-    
+  <script src="script.js"></script>
 </body>
+
 </html>
